# fizzybuzzy

./: .gitignore  CLAUDE.md  README.md  index.html  presentation.html  pyproject.toml  tier-list.html
.github/workflows/: deploy-pages.yml
cheat/: build.py
common/: glyphbuild.py
demo/: cheat.html  real.html
honorable-mentions/: index.html
with-base-15/: index.html
with-circuits/: README.md  build.sh  bundle.js  circuit.js  evaluate.js  fizzbuzz.json  fizzbuzz.v  index.html  test.js
with-css/css-counters/: README.md  index.html
with-css/ol-markers/: README.md  index.html
with-cycles/: index.html
with-fonts/: README.md
with-fonts/demo/: cheat.html  how-it-works.html  ligatures.html  opentype.html  real.html
with-fonts/real/: build.py  features.fea
with-fonts/tests/: test_shaping.py
with-lambda-calculus/: README.md  decode.js  fizzbuzz.js  inline.js  test.js
with-lambda-calculus/demo/: index.html
with-racket-2d/: Dockerfile  fizzbuzz.rkt  index.html
with-regex/: README.md  index.html  regex.js  test.js
with-rockstar/: index.html  worker.js
with-rockstar/wasm/: LICENSE.md  fetch-engine.sh
with-rockstar/wasm/_framework/: blazor.boot.json  dotnet.native.67rwwbuwmw.js
with-term-rewriting/: README.md  index.html
with-turing-machine/: README.md  index.html  machine.js  test.js
with-waves/: index.html
with-x86/: README.md  fizzbuzz.asm  fizzbuzz.img  index.html
