[project]
name = "fizzybuzzy"
version = "0.1.0"
description = "FizzBuzz implemented as an OpenType font — the GSUB tables do the computation"
requires-python = ">=3.11"
dependencies = [
    "fonttools[woff]>=4.50",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "uharfbuzz>=0.39",
]

[tool.uv]
package = false
